--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,14 @@
-div{
- padding: 20px 10px ;
- background-color: purple ;
+.Cajaexterna{
+ padding: 40px 20px 70px 100px;
+ border: 20px solid #9900ff;
+ border-left: 10px solid #9900ff;
+ border-right: 10px solid #9900ff;
+ background-color: #F9CB9C;
  }
-.interno{
+.Cajainterna{
 	background-color: pink;
-	padding: 20px 20px 50px 50px ;
 	text-align: center;	
+	border:2px dashed #38761D;
+	line-height: 50px;
 }
-p{
-	border: 1px dashed green;
-	background-color: white;
-	padding-top: 10px;
-	padding-bottom: 10px;
-}
+
